--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
     "build": "prisma migrate dev && prisma generate && prisma db seed && next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@tanstack/react-query": "^5.80.7",
     "next": "14.0.4",
     "prisma": "^5.9.1",
     "react": "^18",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
+    "cross-env": "^7.0.3",
     "typescript": "5.4.5"
   }
 }
