--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "cross-env": "^7.0.3",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "typescript": "5.4.5"
   }
 }
